fixed simple rendering issue on safari and firefox

--- a/src/app/components/blog/blog-detail/add-comments/add-comments.scss
+++ b/src/app/components/blog/blog-detail/add-comments/add-comments.scss
@@ -88,7 +88,8 @@
     width: 100px;
     border: none;
     background-color: lightgray;
-    font-size: 12px;
+    font-size: 11px;
+    padding: 2px;
     font-weight: bold;
 
     &:hover {
